# agentity

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.fr.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  deployment.md  development.md  getting-started.md  registry-api.md  security.md
examples/: e2e.py  e2e.ts
