[workspace]
members = [
  "packages/agentity-core",
]
resolver = "2"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
